salvia_macro/tests/query_ui/fail/not_function.rs
use salvia::query;

#[query]
struct A;

fn main() {}
