salvia_macro/tests/query_ui/fail/not_function.stderr
error: #[query]: function is expected
 --> $DIR/not_function.rs:4:1
  |
4 | struct A;
  | ^^^^^^
